# stock_updates

./: README.md  get_bloomberg.py  get_index_symbols.py  get_news.py  main.py  names.txt
next_gen/: .env.example  MIGRATION.md  README.md  get_bloomberg.py  main.py  pyproject.toml  stock_tracker.py
